Changelog
=========

1.0b2 (unreleased)
------------------

1.0b1 May 10, 2012
------------------

- Port contenttype and schema_field local command from zopeskel archetype 
  local commands
  [cewing]

- Port BrowserView and BrowserLayer local commands from zopeskel plone local 
  commands
  [cewing]

- Package created using templer
  [Cris Ewing]