@@ -1,0 +1,10 @@
+#<configure
+#    xmlns="http://namespaces.zope.org/zope"
+#    xmlns:five="http://namespaces.zope.org/five"
+#    xmlns:i18n="http://namespaces.zope.org/i18n"
+#    i18n_domain="${namespace_package}.${package}">
+
+#  <!-- -*- extra stuff goes here -*- -->
+  <include package=".portlets" />
+  
+#</configure>
