@@ -1,0 +1,23 @@
+#<?xml version="1.0"?>
+#<!-- This file is used to register new types of portlets. It can also
+#     be used to register completely new column types. See CMFPlone's version
+#     of this file for more information.
+#  -->
+#<portlets
+#    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+#    i18n:domain="plone">
+#	<!-- -*- extra stuff goes here -*- -->
+
+   <!-- to have your portlet's title and description translated in 
+        @@manage-portlets, provide the messageids for the i18n:domain plone
+        (see http://dev.plone.org/plone/ticket/9631 or
+             http://dev.plone.org/plone/ticket/9090) for more information on 
+        internationalization with portlets or in plone in general -->
+   <portlet
+     addview="${dotted_name}.${portlet_type_name}"
+     title="${portlet_name}"
+     description="${description}"
+     i18n:attributes="title; description"
+   />
+
+#</portlets>
