@@ -4,6 +4,9 @@ Changelog
 1.0b2 (unreleased)
 ------------------
 
+- Port Portlet local command from zopeskel plone local commands
+  [calvinhp]
+
 1.0b1 May 10, 2012
 ------------------
 
